<?xml version="1.0"?>
<package format="2">
  <name>inrol_am_flight_scripts</name>
  <version>0.0.0</version>
  <description>The inrol_am_flight_scripts package</description>
  <maintainer email="inrol@todo.todo">inrol</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
